@@ -37,3 +37,7 @@ val contrib_dirs : string list
 
 val exec_extension : string (* "" under Unix, ".exe" under MS-windows *)
 val with_geoproof : bool ref (* to (de)activate functions specific to Geoproof with Coqide *)
+
+val browser : string
+(** default web browser to use, may be overriden by environment
+    variable COQREMOTEBROWSER *)
